# Easy_Menu_builder

./: CMakeLists.txt  LICENSE  README.MD  THIRD_PARTY.MD  main.cpp
example/c_usage/: CMakeLists.txt  README.MD  main.c
example/c_usage/src/: generated_code.cpp
example/cpp_usage/: CMakeLists.txt  README.MD  main.cpp
example/cpp_usage/include/: generated_header.h
example/cpp_usage/src/: generated_code.cpp
include/: OLED_simulator.h  code_generator.h  cpp_playground.h  main_window.h  menu.h  menu_builder_window.h  menu_c_wrapper.h  menu_item_editor.h  oled_simulator.h  oled_window.h  runtime_menu_builder.hpp
lib/menu_emulator_lib/: CMakeLists.txt
lib/menu_emulator_lib/include/: generated_code.h
lib/menu_emulator_lib/src/: generated_code.cpp
lib/menu_navigator/: CMakeLists.txt
lib/menu_navigator/include/: menu_c_wrapper.h  menu_navigator.h
lib/menu_navigator/src/: menu_c_wrapper.cpp  menu_navigator.cpp
src/: OLED_simulator.cpp  code_generator.cpp  cpp_playground.cpp  main_window.cpp  menu.cpp  menu_builder_window.cpp  menu_c_wrapper.cpp  menu_item_editor.cpp  oled_simulator.cpp  oled_window.cpp
